CON-fix-gap-issue-proposition

--- a/extensions/wikia/Venus/styles/article/article.scss
+++ b/extensions/wikia/Venus/styles/article/article.scss
@@ -93,6 +93,11 @@ $article-nav-gap-coverunit-large: 220px;
 		clear: left;
 	}
 
+	.venus-wrapper {
+		width: auto;
+		overflow: hidden;
+	}
+
 	.editsection {
 		@include font-size-xxs;
 		display: inline-block;
